Add a comment with error code explanation

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ python_files =
 
 pep8maxlinelength = 96
 pep8ignore =
+    # E128: continuation line under-indented for visual indent
     *.py E128
 
 [coverage:run]
